@@ -1241,6 +1241,10 @@ enum ReviewModes {
 	Created by jonathansfox.
 */
 
+
+/* end the game and clean up */
+void end_game(int err = 0);
+
 /*******************************************************************************
 *
 *                                Common Stuff
